package inscryption.carte;

public enum TypeAnimal {
    CHAT,
    GRIZZLY,
    COYOTE,
    MOINEAU,
    CORBEAU,
    ECUREUIL,
    HERMINE,
    LOUVETEAU,
    LOUP,
    PUNAISE,
    ELAN,
    VIPERE,
    PORC_EPIC
}
