package inscryption.engine;

public class Input
{

    String m_input;

    Input(String input)
    {
        m_input = input;
    }

    public void changerInput(String newInput)
    {
        m_input = newInput;
    }

    public boolean tryExecuteInput()
    {
        for (  )
    }
}
