package inscryption.engine;

public enum InputsPossibles
{
    PLACER,
    FIN,
    PIOCHER
}
