package inscryption.engine;

public enum Position
{
    A1,
    A2,
    A3,
    A4,
    B1,
    B2,
    B3,
    B4
}

// pos A pour ennemi, B pour joueur