package inscryption.engine;

public class Renderer
{

    public static String afficherInfosTour(Plateau p)
    {
        return "";
    }
}
